--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,11 @@
     text-wrap: balance;
   }
 }
+.css-hip9hq-MuiPaper-root-MuiAppBar-root {
+  background-color: #fff !important;
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05) !important;
+  color: #282c3f !important;
+}
+.css-hyum1k-MuiToolbar-root {
+  min-height: 85px !important;
+}
