--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,17 @@
     text-wrap: balance;
   }
 }
+body {
+  width: 100%;
+}
+body,
+h1,
+h2,
+div,
+p {
+  margin: 0;
+  padding: 0;
+}
 .css-hip9hq-MuiPaper-root-MuiAppBar-root {
   background-color: #fff !important;
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05) !important;
