--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -27,3 +27,12 @@
 .normal_text {
   @apply text-696b79 font-Assistant text-16 font-normal w-full;
 }
+.divider_with_text {
+  @apply w-full flex items-center my-8 whitespace-nowrap font-Assistant font-bold text-12;
+}
+.divider_text {
+  @apply h-[1px] w-full ml-2 bg-[#eaeaec];
+}
+.bottom_text {
+  @apply font-Assistant font-normal text-696b79 leading-[25px];
+}
