--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,11 @@ p {
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05) !important;
   color: #282c3f !important;
 }
+.css-1x7skt0 {
+  background-color: #fff !important;
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05) !important;
+  color: #282c3f !important;
+}
 .css-hyum1k-MuiToolbar-root {
   min-height: 85px !important;
 }
