again change color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@ p {
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05) !important;
   color: #282c3f !important;
 }
-.css-1x7skt0 {
+.MuiPaper-elevation {
   background-color: #fff !important;
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05) !important;
   color: #282c3f !important;
